2007-08-02  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.3.

2007-08-02  J. Mowery  <jmowery@tresys.com>

	* Corrected sechecker module incomplete domain transitions
	  to once again return results for missing RBAC and user policy
	  for transitions that have sufficient type enforcement rules.

2007-07-27  J. Tang  <jtang@tresys.com>

	* Library jar files are now installed in
	$PREFIX/share/setools-<version>, with symlinks in
	$PREFIX/share/java.  They used to be placed in
	$PREFIX/lib/setools.

	* Added framework for CUnit tests for libseaudit.

2007-07-26  J. Tang  <jtang@tresys.com>

	* Updated all linker map and SWIG interface files to match
	exported library headers.

	* libseaudit/src/filter.c (seaudit_filter_set_match): Added
	ability to set strictness of libseaudit filters.  Be default,
	filters are not strict; this matches previous libseaudit behavior.
	See seaudit_filter_set_match() for definition of "strictness".

2007-07-26  M. Goldman <mgoldman@tresys.com>
	* Added tooltip to glade interface noting that diffing never
	  allow rules could dramaticly increase run time

	* Fixed names in sediffx to be more descriptive (the tree view
	  in the upper left hand corner).  Names changed from
	  AVRules auditallow to Audit Allow Rules as an example.

2007-07-24  J. Tang  <jtang@tresys.com>

	* Added framework for CUnit tests for libapol.

2007-07-23  J. Tang  <jtang@tresys.com>

	* Added framework for CUnit tests for libpoldiff and libqpol.
	configure now has the option --with-test-policies to specify where
	the test policies reside.

2007-07-20  J. Tang  <jtang@tresys.com>

	* Added seaudit_filter for PID.

2007-07-19  J. Tang  <jtang@tresys.com>

	* Added many optimizations to qpol_policy_build_syn_rule_table()
	and associated functions.  With some code rewrites, a doubling of
	the syntactic rule hash table size, and an improved hashing
	function, it is at least three times faster to build the table.

2007-07-18  J. Tang  <jtang@tresys.com>
