@@ -38,14 +38,18 @@ is capable of searching multiple types of rules. At least one of the following
 must be provided to specify the desired type(s) of rules to search.
 .IP "-A, --allow"
 Search for allow rules.
-.IP "--neverallow"
-Search for neverallow rules.
 .IP "--auditallow"
 Search for auditallow rules.
 .IP "--dontaudit"
 Search for dontaudit rules.
-.IP "-T, --type"
-Search for type_transition, type_member, and type_change rules.
+.IP "--neverallow"
+Search for neverallow rules.
+.IP "--type_change"
+Search type_change rules.
+.IP "--type_member"
+Search type_member rules.
+.IP "-T, --type_trans"
+Search for type_transition rules.
 .IP "--role_allow"
 Search for role allow rules.
 .IP "--role_trans"
